fixes overflow and more for empty forum

--- a/site/public/css/forum.css
+++ b/site/public/css/forum.css
@@ -10,7 +10,7 @@ body {min-width: 925px;}
 }
 
 .forum_show_threads {
-    overflow: hidden;
+    overflow: visible;
     flex-direction: column;
     display: flex;
 }
